Added full docs to the 2nd endpoint
