# api/swagger/swagger.yaml
@@ -53,7 +53,30 @@ paths:
           type: string
       responses:
         '200':
-          description: Ok
+          description: Object with a single group
+          schema:
+            type: object
+            properties:
+             group:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                    groupName:
+                      type: string
+                    mentor:
+                      type: string
+                    members:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          _id: 
+                            type: string
+        '500':
+          description: Internal server error
   /group/createGroup:
     post:
       summary: Create a group
